--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FirebaseDB</string>
+    <string name="google_key">AIzaSyAuZIpqe68pD2AljChBtYI5rUyye8rE1hQ</string>
 </resources>
